styles/style.css
.site-container {
  display: flex;
  flex-flow: column nowrap;
  height: 100%;
}

.height-filler {
  height: 100%;
}

.height-filler__svg {
  height: 250px;
  position: absolute;
  opacity: 0.55;
  top: 5%;
  left: -30%;
  z-index: -1;
}

/* Wrapper div for background svg */
.wrapper {
  position: absolute;
  top: 65%;
  right: 5%;
  height: 12rem;
  width: 30%;
  opacity: 0.65;
  border-radius: 64% 36% 85% 15% / 51% 62% 38% 49%;
}

/* Bank note svg from heropatterns.com */
.wrapper--background-img {
  background-color: hsl(217, 45%, 20%);
  background-image: url("data:image/svg+xml,%3Csvg width='100' height='20' viewBox='0 0 100 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.184 20c.357-.13.72-.264 1.088-.402l1.768-.661C33.64 15.347 39.647 14 50 14c10.271 0 15.362 1.222 24.629 4.928.955.383 1.869.74 2.75 1.072h6.225c-2.51-.73-5.139-1.691-8.233-2.928C65.888 13.278 60.562 12 50 12c-10.626 0-16.855 1.397-26.66 5.063l-1.767.662c-2.475.923-4.66 1.674-6.724 2.275h6.335zm0-20C13.258 2.892 8.077 4 0 4V2c5.744 0 9.951-.574 14.85-2h6.334zM77.38 0C85.239 2.966 90.502 4 100 4V2c-6.842 0-11.386-.542-16.396-2h-6.225zM0 14c8.44 0 13.718-1.21 22.272-4.402l1.768-.661C33.64 5.347 39.647 4 50 4c10.271 0 15.362 1.222 24.629 4.928C84.112 12.722 89.438 14 100 14v-2c-10.271 0-15.362-1.222-24.629-4.928C65.888 3.278 60.562 2 50 2 39.374 2 33.145 3.397 23.34 7.063l-1.767.662C13.223 10.84 8.163 12 0 12v2z' fill='%23a6c7f2' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
}

/* Background color to blend with waves svg*/
.height-filler--bottom-color {
  background-color: hsl(217, 45%, 20%);
}

.background {
  display: flex;
  align-items: center;
  flex-flow: column nowrap;
  justify-content: center;
  position: static;
  width: 100%;
}

.background__svg {
  position: absolute;
  top: 40%;
  left: 0;
  right: 0;
  bottom: 0;
}

.form {
  background-color: hsl(0, 0%, 100%);
  border-radius: 0.75rem;
  box-shadow: 0 15px 35px hsla(0, 0%, 0%, 0.2);
  width: 37.5rem;
  position: relative;
  z-index: 999;
}

/* Form shrinks on mobile */
@media (max-width: 576px) {
  .form {
    width: 18.75rem;
  }
}

.fieldset {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
}

.fieldset__legend {
  text-align: center;
}

/* Blue line under legend */
.fieldset__legend--blue::before {
  content: "";
  position: absolute;
  left: 30%; /* 37.5% for center */
  bottom: 0;
  height: 1px;
  width: 40%;
  border-bottom: 5px solid hsl(212, 72%, 65%);
}

.fieldset__label {
  padding: 1.5rem 0;
}

.fieldset__input-text {
  border-radius: 0.75rem;
  border: none;
  box-shadow: 0px 0px 5px 1px hsl(0, 0%, 70%);
  padding: 0.6rem;
  text-align: center;
  font-size: 1rem;
}

.table {
  padding-bottom: 1rem;
}

.thead {
  border: 2px solid hsl(210, 23%, 95%);
}

.thead__th {
  font-weight: 600;
  font-size: 1.25rem;
  letter-spacing: 1px;
  padding: 1rem;
}

.thead__th-1 {
  background-color: hsl(210, 65%, 78%);
}

.thead__th-2 {
  background-color: hsl(220, 48%, 50%);
}

.thead__th--white {
  color: hsl(0, 0%, 100%)
}

.tbody {
  border: 2px solid hsl(210, 23%, 95%);
}

.tbody__td {
  font-weight: 400;
  font-size: 1rem;
  max-width: 15rem;
  min-width: 11.5rem;
  padding: 1.25rem;
  text-align: center;
  word-break: break-all;
}

/* To make td on mobile */
@media (max-width: 576px) {
  .tbody__td {
    min-width: auto;
  }
}

.tbody__td-1 {
  background-color: hsla(210, 65%, 78%, 0.5);
}

.tbody__td-2 {
  background-color: hsl(220, 48%, 50%, 0.3);
}

.tbody__td--dark {
  color: hsl(210, 100%, 0%);
}

.submit {
  background-color: inherit;
  background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23b6b6b6' fill-opacity='0.32' fill-rule='evenodd'%3E%3Ccircle cx='3' cy='3' r='3'/%3E%3Ccircle cx='13' cy='13' r='3'/%3E%3C/g%3E%3C/svg%3E");
  border-radius: 0 0 0.75rem 0.75rem;
  display: flex;
  justify-content: center;
}

.submit__input {
  background-color: hsl(153, 43%, 42%);
  border: 2px solid hsl(153, 43%, 42%);
  color: hsl(0, 0%, 100%);
  cursor: pointer;
  margin: 1.4rem;
  padding: 8px 10px;
  font-size: 14px;
  text-align: center;
}

table {
  margin: 0 auto;
}

svg {
  width: 100%;
  display: block;
}

legend {
  position: relative;
  font-size: 1.5rem;
  font-weight: 600;
  padding: 1.5rem 0;
}

label {
  font-size: 1rem;
  color: hsl(201, 23%, 34%);
}

fieldset {
  border: none;
  margin: 1.5rem;
}

html {
  font: 16px/1.65 system-ui, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  background-color: hsl(214, 75%, 80%);
  min-height: 100%;
  display: flex;
}

body {
  flex: 1;
}

*,
*::after,
*::before {
  box-sizing: border-box;
}

